<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp">
                <EditText
                    android:id="@+id/edtname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:hint="@string/name"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPersonName"/>
                <EditText
                    android:id="@+id/edtcampny"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:hint="@string/company"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPersonName"/>
                <EditText
                    android:id="@+id/edtage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:hint="@string/telephone"
                    android:layout_marginBottom="10dp"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/edtphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:hint="@string/address"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPhonetic"/>

                <Button
                    android:id="@+id/btnsubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:hint="Enter Age Here"
                    android:textColor="#fff"
                    android:background="@color/colorAccent"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>
</ScrollView>